# EditPDF-Pro

./: .gitignore  build.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: 项目方案.md
scripts/: check_github.py  git_push.py  load_github_token.py  set_remote.py  setup_github.ps1  setup_github.py  test_github.py  zentao_helper.py  zentao_init.ps1  zentao_init.py  zentao_login.ps1  zentao_test.py  zentao_web.ps1
src/: main.py
src/app/: constants.py  settings.py  style.qss  theme.py
src/core/: annotation_ops.py  models.py  page_ops.py  pdf_engine.py  renderer.py  text_ops.py  watermark_ops.py
src/ui/: main_window.py
src/ui/dialogs/: tool_dialog.py
src/ui/pages/: open_page.py  page_manage_page.py  settings_page.py  watermark_page.py
src/utils/: font_utils.py  signal_bus.py
tests/: run_tests.py  test_font_detect.py  test_full.py  test_integration.py  test_pdf_engine.py
